<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.diegocunha.bankapp.view.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/userNameEditText"
                style="@style/InputField"
                android:cursorVisible="true"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/lato_light"
                android:hint="@string/hint_username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameInputLayout"
            android:layout_centerInParent="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/passwordEditText"
                style="@style/InputField"
                android:cursorVisible="true"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/lato_light"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:background="@color/colorBackground"
            android:fontFamily="@font/lato"
            android:text="@string/login_text"
            android:textColor="@android:color/white" />

        <ProgressBar
            visibleOrGone="@{viewModel.isLoading}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>